[tool.poetry]
name = "pl_worker"
version = "0.1.0"
description = ""
authors = ["Jesse Schoepfer <jelloeater@gmail.com>"]
readme = "README.md"
#homepage = "https://github.com/Jelloeater/xx"
#keywords = ["hubitat", "makerapi","requests"]
#classifiers = ["Development Status :: 5 - Production/Stable",
# "Environment :: No Input/Output (Daemon)",
# "Topic :: Home Automation",
# "Intended Audience :: Developers",
# "Operating System :: OS Independent",
#]

[tool.poetry.dependencies]
python = "^3.10"
hubitatcontrol = {git = "https://github.com/Jelloeater/hubitatcontrol.git"}
extcolors = "*"
bing-image-downloader = "*"
fastapi ="*"
uvicorn ={version="*", extras = ["standard"]}




[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = "test/"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(asctime)s] [%(levelname)8s] --- %(message)s (%(filename)s:%(funcName)s():%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 120


[tool.poetry.group.dev.dependencies]
# Proj specific
python-dotenv = "*"
httpx = "*"
# General Tools
setuptools = "*"
pytest = "*"
pytest-cov = "*"
pytest-pycharm = "*"
pre-commit = "*" # Commit hooks
vulture = "*" # Dead Code Search
isort = "*" # Import Cleanup
radon = "*" # Code Complexity
xenon = "*" # Code Complexity
black = "*" # Formating
typing_extensions ="*" # Typing
#typeguard ="*" # Typing
#mypy = "*" # Typing
pdoc3 = "*"# Doc Gen
pylint = "*" # Needed for diag gen
bandit = "*" # Security
whispers = "*" # Security cred search
gittyleaks ="*" # Security cred search
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
