[tool.poetry]
name = "pl_worker"
version = "0.1.0"
description = ""
authors = ["Jesse Schoepfer <jelloeater@gmail.com>"]
readme = "README.md"
#homepage = "https://github.com/Jelloeater/xx"
#keywords = ["hubitat", "makerapi","requests"]
#classifiers = ["Development Status :: 5 - Production/Stable",
# "Environment :: No Input/Output (Daemon)",
# "Topic :: Home Automation",
# "Intended Audience :: Developers",
# "Operating System :: OS Independent",
#]

[tool.poetry.dependencies]
python = "^3.10"
hubitatcontrol = {git = "https://github.com/Jelloeater/hubitatcontrol.git"}
extcolors = "*"
bing-image-downloader = "*"
fastapi ="*"
uvicorn ={version="*", extras = ["standard"]}


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = "test/"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(asctime)s] [%(levelname)8s] --- %(message)s (%(filename)s:%(funcName)s():%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.flake8]
#ignore = ['E231', 'E241']
exclude =['./tests']
max-line-length = 120
count = false
statistics = true
diff = true
format = "pylint"


[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
line_length = 120

[tool.poetry.group.test.dependencies]
httpx = "*"
setuptools = "*"
pytest = "*"
pytest-cov = "*"
python-dotenv = "*"

[tool.poetry.group.dev.dependencies]
setuptools = "*"
pytest = "*"
pytest-cov = "*"
pytest-pycharm = "*"
pre-commit = "*"
vulture = "*"
isort = "*"
radon = "*"
xenon = "*"
black = "*"
typing_extensions ="*"
#typeguard ="*" # Typing
#mypy = "*" # Typing
pdoc3 = "*"
pylint = "*"
bandit = "*"
whispers = "*"
flake8 = "*"
Flake8-pyproject="*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
